[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/espaco_instrucoes.png" type="Texture" id=1]
[ext_resource path="res://assets/cenario_instrucoes.png" type="Texture" id=2]
[ext_resource path="res://assets/cenario_batalha.png" type="Texture" id=3]
[ext_resource path="res://assets/instrucoes_borda.png" type="Texture" id=4]
[ext_resource path="res://cenas_universais/Dash/dash.tscn" type="PackedScene" id=5]
[ext_resource path="res://cenas_universais/jogador.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/plataforma.png" type="Texture" id=7]
[ext_resource path="res://assets/botao_lixeira.png" type="Texture" id=8]
[ext_resource path="res://assets/placa.png" type="Texture" id=9]
[ext_resource path="res://assets/botao_play.png" type="Texture" id=10]
[ext_resource path="res://cenas_universais/botaoVoltaMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/base_cartas.png" type="Texture" id=13]
[ext_resource path="res://niveis/cordel2/c2_nivel2/c2_nivel2_cartas.gd" type="Script" id=14]
[ext_resource path="res://niveis/cordel2/c2_nivel2/c2_nivel2_instrucoes.gd" type="Script" id=15]
[ext_resource path="res://niveis/cordel2/c2_nivel2/c2_nivel2.gd" type="Script" id=16]
[ext_resource path="res://cenas_universais/mensagem_derrota.tscn" type="PackedScene" id=17]
[ext_resource path="res://cenas_universais/mensagem_vitoria.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39, 38.25 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 12 )

[node name="c2_nivel2" type="Node2D"]
script = ExtResource( 16 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 225, 162 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 3 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 256, 150 )
texture = ExtResource( 2 )

[node name="s_instrucao1" type="Sprite" parent="fundo"]
position = Vector2( 190, -110.5 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 1 )

[node name="borda_instrucao1" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, -110 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 4 )

[node name="s_instrucao2" type="Sprite" parent="fundo"]
position = Vector2( 190, -37 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 1 )

[node name="borda_instrucao2" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, -37 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 4 )

[node name="s_instrucao3" type="Sprite" parent="fundo"]
position = Vector2( 190, 36 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 1 )

[node name="borda_instrucao3" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, 36 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 4 )

[node name="pisos" type="Node" parent="."]

[node name="piso_esquerda" type="Area2D" parent="pisos"]
position = Vector2( 104, 144 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_esquerda"]
scale = Vector2( 6, 5 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_esquerda"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 1 )

[node name="piso_centro" type="Area2D" parent="pisos"]
position = Vector2( 159, 144 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_centro"]
position = Vector2( 2, 0 )
scale = Vector2( 6, 5 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_centro"]
position = Vector2( 3, -69.75 )
shape = SubResource( 1 )

[node name="piso_centro2" type="Area2D" parent="pisos"]
position = Vector2( 215, 144 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_centro2"]
position = Vector2( 2, 0 )
scale = Vector2( 6, 5 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_centro2"]
position = Vector2( 3, -69.75 )
shape = SubResource( 1 )

[node name="piso_direita" type="Area2D" parent="pisos"]
position = Vector2( 272, 144 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="placa" type="Sprite" parent="pisos/piso_direita"]
position = Vector2( -4, -76 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="pisos/piso_direita"]
scale = Vector2( 6, 5 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_direita"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 1 )

[node name="instrucoes" type="Node" parent="."]
script = ExtResource( 15 )

[node name="instrucao1" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 9.0
margin_right = 508.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao2" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 82.0
margin_right = 508.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao3" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 155.0
margin_right = 508.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="botoes" type="Node" parent="."]

[node name="botao_pronto" type="TextureButton" parent="botoes"]
margin_left = 384.0
margin_top = 224.0
margin_right = 424.0
margin_bottom = 264.0
rect_scale = Vector2( 1.75, 1.75 )
texture_normal = ExtResource( 10 )

[node name="botao_lixeira" type="TextureButton" parent="botoes"]
margin_left = 451.0
margin_top = 229.0
margin_right = 491.0
margin_bottom = 269.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )

[node name="botaoVoltaMenu" parent="botoes" instance=ExtResource( 11 )]
margin_left = 1.0
margin_top = 1.0
margin_right = 21.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )

[node name="cartas" type="Node" parent="."]
script = ExtResource( 14 )

[node name="carta0" type="TextureButton" parent="cartas"]
margin_left = 90.0
margin_top = 193.0
margin_right = 122.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta0"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="carta1" type="TextureButton" parent="cartas"]
margin_left = 162.0
margin_top = 193.0
margin_right = 194.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta1"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="carta2" type="TextureButton" parent="cartas"]
margin_left = 235.0
margin_top = 193.0
margin_right = 267.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta2"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Dash" parent="." instance=ExtResource( 5 )]

[node name="jogador" parent="." instance=ExtResource( 6 )]
position = Vector2( 107, 104 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 151 )
current = true

[node name="mensagens" type="Node" parent="."]

[node name="mensagem_vitoria" parent="mensagens" instance=ExtResource( 18 )]
visible = false
nivelRestart = "res://niveis/cordel2/c2_nivel2/c2_nivel2.tscn"
nivelProximo = "res://niveis/cordel2/c2_nivel3/c2_nivel3.tscn"

[node name="mensagem_derrota" parent="mensagens" instance=ExtResource( 17 )]
visible = false
nivelRestart = "res://niveis/cordel2/c2_nivel2/c2_nivel2.tscn"
voltaMenu = "res://menu/menu.tscn"

[connection signal="body_entered" from="pisos/piso_direita" to="." method="_on_piso_direita_body_entered"]
[connection signal="body_exited" from="pisos/piso_direita" to="." method="_on_piso_direita_body_exited"]
[connection signal="pressed" from="botoes/botao_pronto" to="." method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_pronto" to="cartas" method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="instrucoes" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="cartas" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="cartas/carta0" to="instrucoes" method="_on_carta0_pressed"]
[connection signal="pressed" from="cartas/carta0" to="cartas" method="_on_carta0_pressed"]
[connection signal="pressed" from="cartas/carta1" to="instrucoes" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta1" to="cartas" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta2" to="instrucoes" method="_on_carta2_pressed"]
[connection signal="pressed" from="cartas/carta2" to="cartas" method="_on_carta2_pressed"]
